# prompt-engineering

./: .gitignore  Dockerfile  README.md  build.sh  document-input-SAMPLE.md  generate_document.sh  requirements.txt  run.sh
working-dir/: SAMPLE-key.txt  cli.py  doc_config-SAMPLE.json  doc_gen_cli.py  document-input.md  document-input_.md  pyproject.toml
working-dir/input_doc/: desc.md
working-dir/src/prompt_egineering/: __main__.py  gpt_client.py  prompts.py  response_models.py
working-dir/src/prompt_engineering/: __main__.py  gpt_client.py  prompts.py  response_models.py  scraper.py  utils.py
working-dir/templates/: doc_system_prompt.txt
