[project]
name = "prompt_engineering"
description = "Open_ai GPT prompt engineering"
version = "0.1.0"
authors = [
    { name = "Roberto Serra", email = "obi.serra@gmail.com" }
]
dependencies = [
    "openai"
]

[project.optional-dependencies]
dev = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]